fix(site): disable overscrolling, it breaks the illusion

--- a/site/assets/styles/main.css
+++ b/site/assets/styles/main.css
@@ -38,6 +38,7 @@ body {
   display: flex;
   flex-flow: column nowrap;
   background-color: silver;
+  overscroll-behavior-y: none;
 }
 
 header {
